--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display&display=swap');
 *{
     box-sizing: border-box;
     margin: 0;
@@ -19,11 +18,26 @@ footer {
 }
 
 footer .footer-top {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    align-items: center;
+    display: flex;
+    flex-direction: row;
 
 }
+
+footer .footer-top .footer-top__card {
+    margin: 100px;
+}
+
+footer .footer-top .footer-top__card h1{
+    color: #2D2D2D;
+    font-family: 'Playfair Display', serif;
+    font-weight: bold;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 100.9%;
+    
+}
+
+
 
 footer .footer-bottom {
     position: absolute;
@@ -54,6 +68,8 @@ footer .footer-bottom p {
     font-family: 'Lato', sans-serif;
     font-size: 15px;
     font-style: normal;
+    line-height: 100.9%;
 }
+
 
 
