--- a/src/components/styles/Ad.css
+++ b/src/components/styles/Ad.css
@@ -1,9 +1,9 @@
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
 .Ad{
-    width: 47px;
-    height: 36px;
-    top: 1698px;
-    left: 1147px;
-    position: absolute;
     font-family: Lato;
     font-style: normal;
     font-weight: bold;
@@ -13,10 +13,12 @@
     
 
 }
-.img_Ad{
-    position: absolute;
+
+.contAd{
     width: 270px;
     height: 266px;
-    left: 1035px;
-    top: 1583px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(.jpg);
+    background-image:  url('https://i83.servimg.com/u/f83/20/31/79/72/image_12.png');
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
