--- a/src/components/styles/MostPopularRecipes.css
+++ b/src/components/styles/MostPopularRecipes.css
@@ -11,7 +11,7 @@
     height: 820px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items:stretch; */
     justify-content: space-between;
 }
 .mostPopular_text{
@@ -21,18 +21,11 @@
     width: 870px;
 }
 
-hr {
-    height: 2px;
-    width: 870px;
-    background-color: black;
-    margin: 15px 0 25px 0;
-}
-
 
 .RecipesCont{
     
     height: 662px;
-    width: max-content;
+    width: 870px;
     display: grid;
     grid-template: 1fr 10px 1fr/ 1fr 10px 70px 10px 1fr;
     
@@ -43,6 +36,7 @@ hr {
     grid-row-start: 1;
     grid-row-end: 2;
     background-image: url("https://i83.servimg.com/u/f83/20/31/79/72/image10.png");
+    background-size: cover;
 }
 .rc2{
     grid-column-start: 5;
@@ -50,6 +44,7 @@ hr {
     grid-row-start: 1;
     grid-row-end: 2;
     background-image: url('https://i83.servimg.com/u/f83/20/31/79/72/image_10.png');
+    background-size: cover;
 }
 .rc3{
     grid-column-start: 1;
@@ -57,6 +52,7 @@ hr {
     grid-row-start: 3;
     grid-row-end: 4;
     background-image: url('https://i83.servimg.com/u/f83/20/31/79/72/image_11.png');
+    background-size: cover;
 }
 .rc4{
     grid-column-start: 3;
@@ -64,6 +60,7 @@ hr {
     grid-row-start: 3;
     grid-row-end: 4;
     background-image: url('https://i83.servimg.com/u/f83/20/31/79/72/rectan10.png');
+    background-size: cover;
 }
 
 .Recipe{
@@ -74,10 +71,19 @@ hr {
     flex-direction: column ;
 }
 
+.ContText{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 72px;
+}
+
 .RecipeName{
     font-weight: bold;
     font-size: 20px;
     line-height: 100.9%;
+    color: white;
 }
 
 .StatsCont{
@@ -96,4 +102,32 @@ hr {
     font-size: 12px;
     line-height: 100.9%;
     text-align: center;
+    color: white;
 }
+
+.pagesCont{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pages{
+    display: flex;
+    flex-direction: row;  
+    align-items: center;
+    justify-content: space-between;  
+    width: 111px;
+    height: 26px;
+    font-style: normal;
+font-weight: normal;
+font-size: 24px;
+line-height: 108.9%;
+/* or 26px */
+
+text-align: center;
+}
+
+.n1{
+    color:  #FE4A51;
+}
+
